infra/k8s/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: auth-depl
spec:
  matchLables:
    app: auth
  template:
    metadata:
      lables:
        app:auth
    spec:
      containers:
        - name: auth
          image: harpreet/auth
---

apiVersion: v1
kind: Service
metadata:
  name: auth-srv
spec: 
  selector:
    app: auth
  ports:
    - name: auth
      protocol: TCP
      port: 3000
      targetPort: 3000
